# selenium-mcp-server

./: .gitignore  LICENSE  MCP_SETUP_GUIDE.md  PUBLISH_GUIDE.md  README.md  mcp.json  mcp_config_batch.json  mcp_config_direct.json  mcp_config_with_install.json  mcp_launcher.py  pyproject.toml  requirements.txt  setup.py  start_selenium_mcp.bat
.github/workflows/: ci.yml
config/: configuration_guide.md  mcp_client_config.json  mcp_client_config_auto_install.json  mcp_client_config_direct.json  mcp_client_config_powershell.json  mcp_client_config_windows.json  mcp_client_config_windows_module.json  mcp_config.json
docs/: MANUAL_TESTING.md  QUICK_START.md
examples/: example_usage.py
scripts/: cleanup.py  install_dependencies.py
src/: __init__.py  main.py  run_server.py  selenium_mcp_server.py
src/selenium_mcp_server/: __init__.py  __main__.py
tests/: __init__.py  interactive_test.py  run_tests.py  test_browser_management.py  test_error_handling.py  test_selenium_mcp.py
