[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-mcp-server"
version = "1.1.0"
description = "A powerful Model Context Protocol (MCP) server that brings Selenium WebDriver automation to AI assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Krishna Pollu", email = "your.email@example.com"}
]
maintainers = [
    {name = "Krishna Pollu", email = "your.email@example.com"}
]
keywords = ["selenium", "webdriver", "automation", "mcp", "model-context-protocol", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "anyio>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/krishnapollu/selenium-mcp-server"
Repository = "https://github.com/krishnapollu/selenium-mcp-server"
Documentation = "https://github.com/krishnapollu/selenium-mcp-server#readme"
"Bug Reports" = "https://github.com/krishnapollu/selenium-mcp-server/issues"
"PyPI" = "https://pypi.org/project/selenium-mcp-server/"

[project.scripts]
selenium-mcp-server = "selenium_mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 